<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
                android:background="#f41b1b1b">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/main_step_one"
            android:id="@+id/stepOneText"
            android:gravity="center_horizontal"
            android:textColor="@color/primary"
            android:textSize="26sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/main_step_two"
            android:id="@+id/stepTwoText"
            android:gravity="center_horizontal"
            android:textColor="@color/primary"
            android:textSize="26sp"
            android:textIsSelectable="false"
            android:layout_below="@+id/stepOneText"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="46dp" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="After"
            android:id="@+id/selectedTime"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            android:textIsSelectable="false"
            android:layout_toStartOf="@+id/mainStart"
            android:layout_alignTop="@+id/editHours"
            android:layout_alignParentStart="true"
            android:textStyle="italic" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_start"
            android:id="@+id/mainStart"
            android:textSize="30sp"
            android:textColor="#FFFFFF"
            android:background="@color/primary"
            android:padding="10sp"
            android:layout_marginBottom="39dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:theme="@style/AppTheme"
            />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editHours"
            android:text="5"
            android:gravity="center_horizontal"
            android:textSize="26sp"
            android:textIsSelectable="false"
            android:layout_centerVertical="true"
            android:padding="0dp"
            android:textColor="#FFFFFF"
            android:layout_alignEnd="@+id/mainStart"
            android:layout_toEndOf="@+id/selectedTime"
            android:editable="true"
            android:textStyle="bold"
            android:theme="@style/AppTheme" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="hours"
            android:id="@+id/textView"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            android:textIsSelectable="false"
            android:layout_toStartOf="@+id/mainStart"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:gravity="right" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="minutes"
            android:id="@+id/textView2"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            android:textIsSelectable="false"
            android:layout_toStartOf="@+id/mainStart"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/selectedTime"
            android:gravity="right" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editMinutes"
            android:text="0"
            android:gravity="center_horizontal"
            android:textSize="26sp"
            android:textIsSelectable="false"
            android:padding="0dp"
            android:textColor="#FFFFFF"
            android:layout_toEndOf="@+id/selectedTime"
            android:enabled="true"
            android:editable="true"
            android:layout_below="@+id/selectedTime"
            android:layout_toStartOf="@+id/textView2"
            android:layout_alignEnd="@+id/editHours"
            android:textStyle="bold"
            android:theme="@style/AppTheme" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="seconds"
            android:id="@+id/textView3"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            android:textIsSelectable="false"
            android:layout_toStartOf="@+id/mainStart"
            android:gravity="right"
            android:layout_below="@+id/textView2"
            android:layout_alignParentEnd="true" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editSeconds"
            android:text="0"
            android:gravity="center_horizontal"
            android:textSize="26sp"
            android:textIsSelectable="false"
            android:padding="0dp"
            android:textColor="#FFFFFF"
            android:layout_toEndOf="@+id/selectedTime"
            android:enabled="true"
            android:editable="true"
            android:layout_toStartOf="@+id/textView2"
            android:textStyle="bold"
            android:theme="@style/AppTheme"
            android:layout_below="@+id/textView2"
            android:layout_alignEnd="@+id/editMinutes" />

</RelativeLayout>
